<resources>
    <string name="app_name">旅行雷达</string>
    <string name="start_city">出发城市</string>
    <string name="radar_search">雷达搜索</string>
    <string name="app_version">V1.0.0</string>
    <string name="app_version_full">版本号：V1.0.0</string>
    <string name="app_brief">您身边的旅行资讯专家</string>
    <string name="loading_tip">加载中...</string>
    <string name="reload">重新加载</string>

    <string name="network_error">网络连接不可用</string>

    <string name="first_page">首页</string>
    <string name="second_page">锦囊</string>
    <string name="second_title">旅行锦囊</string>
    <string name="third_page">搜索</string>
    <string name="fourth_page">设置</string>

    <string name="search">搜索</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_check_version">检查更新</string>
    <string name="setting_user_feedback">用户反馈</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_weixin_number">微信公众号：travel_radar</string>
    <string name="setting_weibo_number">微博账号：http://weibo.com/travelradar</string>
    <string name="qrcode_introduce">扫一扫，关注旅行雷达微信公众号</string>

    <string name="radar_introduce">
        旅行雷达是客观独立的旅行信息提供平台，目的是为自由行的朋友们提供优质优价的机票信息，线路指南和旅行规划。目前覆盖了世界主要旅行目的地，监控60余家连通中国或具有延伸特质的航空公司的数据库变动。
    </string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
