<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/color_bottom"
    android:elevation="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="3dp">
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btm_radar_btn"
            android:background="@drawable/radar"
            android:scaleType="fitXY"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_page"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="3dp">
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btm_tips_btn"
            android:background="@drawable/tips"
            android:scaleType="fitXY"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_page"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="3dp">
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btm_search_btn"
            android:background="@drawable/search"
            android:scaleType="fitXY"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_page"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="3dp">
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btm_info_btn"
            android:background="@drawable/info"
            android:scaleType="fitXY"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_page"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>